添加登录界面

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,7 @@
 
     <!--xrecyclerview-->
     <dimen name="textandiconmargin">10dp</dimen>
+
+    <dimen name="text_14">14sp</dimen>
+
 </resources>
