--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="main_color">#00CCFF</color>
     <color name="main_bg_color">#F4F8F9</color>
     <color name="transparent">#0000</color>
+    <color name="white">#fff</color>
 
 
     <color name="main_home_color">#2293F4</color>
@@ -22,5 +23,7 @@
     <color name="color_primary_dark">#663399ee</color>
 
     <color name="color_dark_white">#fcfcfc</color>
+    <color name="login_bg_dark">#E2E7E8</color>
+    <color name="text_hint">#c8c8c8</color>
 
 </resources>
