--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,7 +17,11 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <include layout="@layout/layout_home_carousel"/>
+            <!--<include layout="@layout/layout_home_carousel"/>-->
+            <com.mevv.library.CarouselView
+                android:id="@+id/home_carouselView"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"/>
 
             <RelativeLayout
                 android:layout_width="match_parent"
