--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,4 +41,16 @@
         <!--<item name="android:backgroundDimAmount">0.4</item>-->
     </style>
 
+    <!-- 自定义loading dialog -->
+    <style name="style_loading_dialog" parent="android:style/Theme.Dialog">
+        <item name="android:backgroundDimEnabled">true</item><!--模糊-->
+        <item name="android:backgroundDimAmount">0.2</item>
+        <item name="android:windowIsTranslucent">false</item><!--半透明-->
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
 </resources>
