--- a/app/src/main/res/layout/item_home_share.xml
+++ b/app/src/main/res/layout/item_home_share.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:padding="5dp">
 
     <ImageView
         android:id="@+id/iv_item_home_share_pic"
         android:layout_width="50dp"
-        android:layout_height="50dp"/>
+        android:layout_height="50dp"
+        android:src="@mipmap/icon_launcher"/>
 
     <TextView
+        android:id="@+id/tv_item_home_share_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@id/iv_item_home_share_pic"
+        android:text="name"/>
 
 </RelativeLayout>
