--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,5 +25,10 @@
     <color name="color_dark_white">#fcfcfc</color>
     <color name="login_bg_dark">#E2E7E8</color>
     <color name="text_hint">#c8c8c8</color>
+    <color name="text_content">#777a7a</color>
+    <color name="text_line">#e3e6e8</color>
+    <color name="text_titleBar_unchecked">#c2c7c8</color>
+
+
 
 </resources>
