添加房源和联系人界面

--- a/app/src/main/res/layout/activity_city_picker.xml
+++ b/app/src/main/res/layout/activity_city_picker.xml
@@ -45,7 +45,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
+        <ListView
+            android:id="@+id/lv_city_picker_listView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
