--- a/app/src/main/res/layout/home_toolbar.xml
+++ b/app/src/main/res/layout/home_toolbar.xml
@@ -20,6 +20,7 @@
             android:src="@mipmap/down_arrow"/>
 
         <TextView
+            android:id="@+id/tv_home_toolbar_left_city"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="-5dp"
@@ -42,11 +43,11 @@
 
     <ImageView
         android:id="@+id/iv_home_toolbar_right"
-        android:padding="18dp"
         android:layout_width="54dp"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
+        android:padding="18dp"
         android:src="@mipmap/plus_arrow"/>
 
 
