--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -45,4 +45,9 @@
         <attr name="indicator_color" format="color"/>
     </declare-styleable>
 
+    <declare-styleable name="CircleImageView">
+        <attr name="border_color" format="color"/>
+        <attr name="border_width" format="dimension"/>
+    </declare-styleable>
+
 </resources>
